--- a/CSS/cssproject/project1.html
+++ b/CSS/cssproject/project1.html
@@ -9,11 +9,11 @@
 <body>
     <div class="Container">
     <h1 class="icon">1</h1>
-    <h2 id="first">first container</h2>
+    <h2 id="first">first container from home</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, dolor?</p>
     <br>
     <h1 class="icon">2</h1>
-    <h2 id="first">second container</h2>
+    <h2 id="first">second container from work</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, sunt.</p>
     </div>
 </body>
