--- a/CSS/css1.html
+++ b/CSS/css1.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS tutorial</title>
     <link rel="stylesheet" href="./css.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <h2>Browser tools</h2>
+    <h2>google chrome</h2>
 </body>
 </html>
