Typography project and some rough work

--- a/CSS/css1.html
+++ b/CSS/css1.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./css.css">
 </head>
 <body>
-    <h2>Browser tools</h2>
-    <h2>google chrome</h2>
+    <a href="#">google</a>
+    <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, tempora!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, tempora!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, tempora!</p>
 </body>
 </html>
