CSS Box Model Project

--- a/CSS/css1.html
+++ b/CSS/css1.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS tutorial</title>
     <link rel="stylesheet" href="./css.css">
+    <title>Document</title>
 </head>
 <body>
-    <a href="#">google</a>
-    <h1>Hello World</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, tempora!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, tempora!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, tempora!</p>
+    <h1>Hello I would like to learn css box model</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam voluptatum officiis, quas perferendis ut impedit dicta culpa natus pariatur incidunt.</p>
 </body>
 </html>
