Display Property Project

--- a/CSS/css1.html
+++ b/CSS/css1.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css.css">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css.css">
+        <title>Document</title>
+    </head>
 <body>
-    <h1>Hello I would like to learn css box model</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam voluptatum officiis, quas perferendis ut impedit dicta culpa natus pariatur incidunt.</p>
+    <div class="none">none</div>
+    <div class="opacity-1">opacity one</div>
+    <div class="opacity-5">opacity five</div>
+    <div class="opacity-0">opacity 0</div>
+    <div class="visibility">visibility</div>
+    <h1>hello world</h1>
 </body>
 </html>
